--- a/k8s/templates/3-node/galera-3-haproxy.j2
+++ b/k8s/templates/3-node/galera-3-haproxy.j2
@@ -18,6 +18,8 @@ spec:
       - name: {{ galera_cluster_name }}-galera-haproxy
         image: {{ galera_cluster_haproxy_docker_image }}
         env:
+        - name: HAPROXY_GALERA_NODE_COUNT
+          value: 3
         - name: HAPROXY_GALERA_NODE_1
           value: {{ galera_cluster_name }}-galera-node1
         - name: HAPROXY_GALERA_NODE_2
