--- a/k8s/templates/5-node/galera-5-nodes-backup.j2
+++ b/k8s/templates/5-node/galera-5-nodes-backup.j2
@@ -263,6 +263,9 @@ spec:
           value: "{{ galera_xtrabackup_password }}"
         - name: RETENTION_PERIOD_DAYS
           value: "{{ galera_cluster_backup_retention_days }}"
+        - name: INC_BACKUP_INTERVAL
+          value: "{{ galera_cluster_backup_incremental_interval }}"
+
         volumeMounts:
           - name: {{ galera_cluster_name }}-galera-node3-volume
             mountPath: "/var/lib/mysql"
